# DJFinances

./: .gitignore  pyproject.toml
DJ_Finances/: manage.py  status_codes.py
DJ_Finances/DJ_Finances/: asgi.py  settings.py  urls.py  wsgi.py
DJ_Finances/entries/: factories.py  models.py  tests.py  urls.py  views.py
DJ_Finances/entries/migrations/: 0001_initial.py
