[tool.poetry]
name = "DJFinances"
version = "0.0.1"
description = ""
authors = ["Kaci Adjou <adjou.kaci@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2.8"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
isort = "^5.9.3"
factory_boy = "^3.2.0"
ipython = "^7.28.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
